# chi

./: git_commands.txt  pyproject.toml
chi/: kubeconfig.yaml
tests/: test_ci.py
tests/meerkat_test.ms/: table.f0  table.f2  table.f2_TSM1  table.f3  table.f4  table.f5
tests/meerkat_test.ms/OBSERVATION/: table.f0
tests/meerkat_test.ms/POINTING/: table.f0
tests/meerkat_test.ms/SOURCE/: table.f0  table.f0i
tests/meerkat_test.ms/SPECTRAL_WINDOW/: table.f0  table.f0i
